# xspatula

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  _config.yml  api.md  compatibility.md  development.md  index.md  installation.md
src/: lib.py
src_setup/: lib_setup.py
tests/: test_api.py  test_compat_imports.py  test_imports.py
xspatula/: __init__.py  facade.py  graph.py  pipeline.py  project.py  schema_graph.py
xspatula/lib/: __init__.py  initiate.py  login.py  pilot.py  structure.py  version.py
xspatula/postgres/: README.md  __init__.py  environment_path.py  pg_ai4sh.py  pg_common.py  pg_get_schema_table.py  pg_processes.py  pg_session.py  version.py
xspatula/setup/: __init__.py  manage_process.py  setup_db.py  setup_db_initiate.py  version.py
xspatula/utils/: __init__.py  code_log.py  csv_read_write.py  datumtid.py  json_read_write.py  pretty_print.py  struct.py  update_dict.py  version.py
