[project]
name = "xspatula"
version = "2.2.0"
description = "Compatibility-first Python library packaging of Xspatula"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xspatula*", "src", "src_setup"]